Added Forgot password activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="179dp"
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
-        android:text="Resend Verification"
+        android:text="@string/resend_verification"
         app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
         app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
         app:layout_constraintTop_toBottomOf="@+id/loginRegisterButton" />
@@ -24,7 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:singleLine="false"
         app:layout_constraintEnd_toEndOf="@+id/loginEmailInput"
@@ -49,7 +49,7 @@
         android:layout_width="179dp"
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
-        android:text="Login"
+        android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@+id/loginResendButton"
         app:layout_constraintStart_toStartOf="@+id/loginResendButton"
         app:layout_constraintTop_toBottomOf="@+id/loginResendButton" />
@@ -60,7 +60,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:clickable="true"
-        android:text="Forgot password?"
+        android:focusable="true"
+        android:text="@string/forgot_password"
         app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
@@ -71,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Login"
+        android:text="@string/login"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/loginEmailInput"
         app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +83,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:clickable="true"
-        android:text="Create account"
+        android:focusable="true"
+        android:text="@string/create_account"
         app:layout_constraintEnd_toEndOf="@+id/loginForgotPassword"
         app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="@+id/loginForgotPassword"
