--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/registerPasswordInput1"
         app:layout_constraintStart_toStartOf="@+id/registerPasswordInput1"
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/registerEmailInput"
         app:layout_constraintStart_toStartOf="@+id/registerEmailInput"
@@ -49,7 +49,7 @@
         android:layout_width="116dp"
         android:layout_height="36dp"
         android:layout_marginTop="4dp"
-        android:text="Register"
+        android:text="@string/register"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/registerEmailInput"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Create Account"
+        android:text="@string/create_account"
         app:layout_constraintEnd_toEndOf="@+id/registerPasswordInput2"
         app:layout_constraintStart_toStartOf="@+id/registerPasswordInput2"
         app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput2" />
