--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,13 +8,13 @@
         android:title="@string/title_feed" />
 
     <item
-        android:id="@+id/navigation_wallet"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_wallet"/>
+        android:id="@+id/navigation_inbox"
+        android:icon="@drawable/ic_inbox_white_24dp"
+        android:title="@string/title_inbox"/>
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_profile" />
+        android:icon="@drawable/ic_person_white_24dp"
+        android:title="@string/title_profile"/>
 
 </menu>
