--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#ebb93221</color>
+    <color name="colorPrimary">#a0db4437</color>
+    <color name="colorAccent">#ff4081</color>
+    <color name="colorSecondary">#a0db4437</color>
 </resources>
