--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,15 +22,13 @@
         android:id="@+id/registerEmailInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/registerUsername"
+        app:layout_constraintStart_toStartOf="@+id/registerUsername"
+        app:layout_constraintTop_toBottomOf="@+id/registerUsername" />
 
     <EditText
         android:id="@+id/registerPasswordInput1"
@@ -51,7 +49,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/register"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/registerEmailInput"
+        app:layout_constraintStart_toStartOf="@+id/registerUsername"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -63,5 +61,19 @@
         app:layout_constraintEnd_toEndOf="@+id/registerPasswordInput2"
         app:layout_constraintStart_toStartOf="@+id/registerPasswordInput2"
         app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput2" />
+
+    <EditText
+        android:id="@+id/registerUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:hint="@string/username"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </android.support.constraint.ConstraintLayout>
