--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimary">#a0db4437</color>
     <color name="colorAccent">#ff4081</color>
     <color name="colorSecondary">#a0db4437</color>
+    <color name="grayColor">#c2c2c2</color>
 </resources>
